--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,12 @@ section .iframe {
 .AboutMe-container {
     Padding: 5rem;
     border: solid 8px var(--accent);
-    
+    display: grid;
+    place-items: center;
+}
+
+.center-table {
+    width: 100%;
 }
 
 .Resume-container {
@@ -113,8 +118,14 @@ section .iframe {
     border: solid 8px var(--accent);
 }
 
-.AboutMe-container {
-    text-align: center;
+.Picture-container img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.Picture-container {
+    padding: 5rem;
+    border: solid 8px var(--accent);
 }
 
 .roboto-thin {
@@ -188,3 +199,22 @@ section .iframe {
     font-weight: 900;
     font-style: italic;
 }
+
+/* Making the website responsible on desktop, tablet, and phone */
+
+@media (max-width: 800px) {
+    .container {
+        padding: 0;
+    }
+
+    .col-md-10,
+    .col-lg-8,
+    .col-xl-7 {
+        width: 100%;
+    }
+
+    .th {
+        text-align: center;
+    }
+}
+
